--- a/front/src/Shared/ui/layout/layout.scss
+++ b/front/src/Shared/ui/layout/layout.scss
@@ -6,5 +6,6 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start; //вертикальное центрирование?
+  padding-top: 132px;
 }
