--- a/front/src/Styles/_mixins.scss
+++ b/front/src/Styles/_mixins.scss
@@ -22,14 +22,14 @@
 }
 
 @mixin h4 {
-  font-size: 0, 9375rem;
+  font-size: 0.9375rem;
   font-weight: 700;
   line-height: 0, 9375rem;
   color: $black;
 }
 
 @mixin text1 {
-  font-size: 0, 9375rem;
+  font-size: 0.9375rem;
   font-weight: 400;
   line-height: 1rem;
   color: $black;
@@ -43,7 +43,7 @@
 }
 
 @mixin text3 {
-  font-size: 0, 625rem;
+  font-size: 0.625rem;
   font-weight: 400;
   line-height: 0.75rem;
   color: $black;
