--- a/front/src/Pages/Requests/ui/modal/RequestsManagementModal.scss
+++ b/front/src/Pages/Requests/ui/modal/RequestsManagementModal.scss
@@ -15,76 +15,16 @@
 
     .RequestModalContent {
         display: flex;
+        height: 548px;
+
         overflow: hidden;
-        height: 400px;
 
         .ModalLeft {
             position: relative;
-            padding: 12px;
             width: 240px;
           
             background-color: $white;
-            border-radius: 8px;
-          
-            .RequestSearchBar {
-                display: flex;
-                align-items: center;
-                justify-content: flex-start;
-                gap: 12px;
-                margin-bottom: 16px;
-            
-                .SearchIcon {
-                    margin-left: 8px;
-                }
-            
-                .SearchInput {
-                    @include text2;
-                    border: none;
-                    width: 120px;
-
-                    &:focus {
-                      outline: none;
-                  }
-                }
-            
-                .RequestCount {
-                    display: flex;
-                    font-size: 14px;
-                    color: #666;
-                    gap: 4px;
-                }
-            }
-
-            &::after {
-              content: "";
-              position: absolute;
-              left: 0;
-              top: 36px;
-              width: 100%;
-              height: 0.1px;
-              background-color: $black;
-              opacity: 0.5;
-            }
-          
-            .RequestList {
-                @include text3;
-            
-                .RequestListItem {
-                    padding: 5px 10px;
-                    margin-bottom: 1px;
-
-                    border-radius: 8px;
-                    backdrop-filter: blur(20px);
-                    box-shadow: 0px 4px 20px 0px #00000040;
-
-                    cursor: pointer;
-
-              
-                    &:hover, &.Selected {
-                        background-color: $grey;
-                    }
-                }
-            }
+            border-radius: $border-radius;
         }
         
         .ModalRight {
@@ -94,7 +34,7 @@
             width: 340px;
           
             background-color: $grey3;
-            border-radius: 8px;
+            border-radius: $border-radius;
           
             .ModalHeader {
                 display: flex;
@@ -114,27 +54,6 @@
                 }
             }
           
-            .StatusSelector {
-                @include text3;
-                width: 100%;
-                margin-bottom: 16px;
-                padding: 8px 12px;
-
-                border-radius: 8px;
-                color: black;
-                border: 1px solid $black;
-                backdrop-filter: blur(4px);
-                box-shadow: 0px 4px 4px 0px #00000040;
-            }
-          
-            .RequestInfo {
-                p {
-                    @include text1;
-                    margin: 8px 0;
-                }
-            }
-            
-          
             .ModalActions {
                 margin-top: auto;
                 display: flex;
@@ -147,7 +66,7 @@
                     min-width: 92px;
 
                     border: 1px solid $grey;
-                    border-radius: 8px;
+                    border-radius: $border-radius;
 
                     cursor: pointer;
 
