--- a/front/src/Pages/Requests/ui/RequestsHeaderPanel.scss
+++ b/front/src/Pages/Requests/ui/RequestsHeaderPanel.scss
@@ -1,7 +1,7 @@
 @import '../../../Styles/mixins';
 @import '../../../Styles/variables';
 
-.HeaderPanel {
+.RequestHeaderPanel {
     display: flex;
     justify-content: flex-start;
     align-items: center;
