--- a/front/src/Styles/_mixins.scss
+++ b/front/src/Styles/_mixins.scss
@@ -24,7 +24,7 @@
 @mixin h4 {
   font-size: 0.9375rem;
   font-weight: 700;
-  line-height: 0, 9375rem;
+  line-height: 0.9375rem;
   color: $black;
 }
 
@@ -38,7 +38,7 @@
 @mixin text2 {
   font-size: 0.75rem;
   font-weight: 400;
-  line-height: 0, 9375rem;
+  line-height: 0.9375rem;
   color: $black;
 }
 
