add layout create project form

--- a/front/src/App/ui/index.css
+++ b/front/src/App/ui/index.css
@@ -26,4 +26,10 @@ body.no-scroll {
 
 .ChevronDown {
   transform: rotate(90deg);
+
+  transition: ease 0.3s;
+
+  &.open {
+    transform: rotate(-90deg);
+  }
 }
