--- a/front/src/Pages/CreateEvent/ui/fields/DateRangePicker.scss
+++ b/front/src/Pages/CreateEvent/ui/fields/DateRangePicker.scss
@@ -1,17 +1,49 @@
 @import 'Styles/mixins';
 @import 'Styles/variables';
 
-.DataField {
-    .DateInput {
-      @include text2;
-      width: 42px; 
 
-      border: none;
-      border-bottom: 1px solid $grey;
-      background: none;
-      color: $black;
-      text-align: center;
+.DateRangeContainer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 
+    .DataField {
+      max-width: 288px;
+      flex: 1;
+
+        .DateInput {
+            @include text2;
+            width: 100%;
+
+            border: none;
+            background: none;
+            color: $black;
+            outline: none;
+            position: relative;
+
+            &::-webkit-calendar-picker-indicator {
+              display: none;
+            }
+
+            &::before { 
+              content: attr(data-placeholder);
+              width: 100%;
+              height: 100%;
+              position: absolute;
+              
+              background-color: $white;
+            }
+            
+            &:focus::before,
+            &.filled::before {
+              display: none;
+            } 
+            
+        }
+
+      svg {
+        cursor: pointer;
+      }
     }
 }
 
