--- a/front/src/App/ui/index.css
+++ b/front/src/App/ui/index.css
@@ -15,3 +15,11 @@ a {
 ul {
   /* list-style: none; */
 }
+
+.ant-form-item-label {
+  padding: 0 !important; /* Убираем внутренние отступы у лейбла */
+}
+
+.ant-form-item-control {
+  padding: 0 !important; /* Убираем внутренние отступы у инпута */
+}
