--- a/front/src/Shared/ui/layout/layout.scss
+++ b/front/src/Shared/ui/layout/layout.scss
@@ -1,6 +1,6 @@
-.GlobalContainer {
+.AuthContainer {
   position: relative;
-  width: 1280px;
+  width: 100%;
   height: 100vh;
   margin: 0 auto;
   display: flex;
