--- a/front/src/Pages/Admin/AdminPage.scss
+++ b/front/src/Pages/Admin/AdminPage.scss
@@ -6,6 +6,7 @@
     display: flex;
     width: 1060px;
     justify-content: space-between;
+    flex-wrap: wrap;
     gap: 20px;
 
     div {
@@ -15,8 +16,9 @@
 
         display: flex;
         flex-direction: column;
-        flex-wrap: wrap;
         gap: 20px;
+        flex-grow: 1;
+        max-width: 380px;
 
         form {
             display: flex;
