--- a/front/src/Pages/Register/ui/Register.scss
+++ b/front/src/Pages/Register/ui/Register.scss
@@ -39,6 +39,11 @@
       background: $yellow;
       border-radius: 8px;
       border: none;
+      cursor: pointer;
+
+      &:active {
+        opacity: 0.7;
+      }
     }
     &-Link {
       @include text2;
