add Profile, Specialization selector; update Header

--- a/front/src/Styles/_buttons.scss
+++ b/front/src/Styles/_buttons.scss
@@ -39,4 +39,9 @@
     &:hover:before {
       opacity: 1;
     }
+
+    &:disabled {
+      background-color: $grey;
+      cursor: default;
+    }
 }
