add Events List; update Create Event

--- a/front/src/Widgets/buttons/SubmitButtons.scss
+++ b/front/src/Widgets/buttons/SubmitButtons.scss
@@ -1,5 +1,5 @@
-.SubmitButtons {
-  display: flex;
-  justify-content: flex-end;
-  margin-top: 36px;
+@import 'Styles/buttons';
+
+.primary-btn {
+  @include primary-btn;
 }
