--- a/front/src/Styles/HeaderPanelStyle.scss
+++ b/front/src/Styles/HeaderPanelStyle.scss
@@ -26,7 +26,7 @@
 
             &.AddButton {
                 padding: 4px;
-                background-color: $orange;
+                background-color: $yellow;
                 border-radius: $border-radius;
                 box-sizing: content-box;
             }
