--- a/front/src/Styles/_buttons.scss
+++ b/front/src/Styles/_buttons.scss
@@ -13,7 +13,7 @@
 
     border-radius: $border-radius;
     border: none;
-    background-color: $orange;
+    background-color: $yellow;
     transition: background 0.3s ease;
 
     cursor: pointer;
