--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -1,6 +1,12 @@
 @import 'Styles/mixins';
 @import 'Styles/variables';
 
+.SelectorContainer {
+  display: flex;
+  flex-direction: column;
+  gap: 16px;
+}
+
 .FormField {
     @include text2;
     display: flex;
@@ -21,7 +27,6 @@
 
 .ListField {
     position: relative;
-    margin-bottom: 12px;
 
     cursor: pointer;
   
@@ -35,7 +40,7 @@
       border-radius: $border-radius;
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       width: 100%;
-      z-index: 10;
+      z-index: 2000;
       overflow: hidden;
   
       .DropdownItem {
@@ -57,7 +62,6 @@
     height: 40px;
     padding: 24px 12px;
     gap: 8px;
-    margin-bottom: 12px;
 
     border-radius: $border-radius;
     border: 1px solid $grey;
