--- a/front/src/Widgets/Notification/Notification.scss
+++ b/front/src/Widgets/Notification/Notification.scss
@@ -8,7 +8,7 @@
   padding: 10px 20px;
   border-radius: 5px;
   font-size: 16px;
-  color: #fff;
+  color: $black;
   z-index: 1001;
   animation: fadeIn 0.3s ease-in-out, fadeOut 0.3s ease-in-out 2.7s;
 
