--- a/front/src/Widgets/Modal/Modal.scss
+++ b/front/src/Widgets/Modal/Modal.scss
@@ -11,6 +11,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
+
+  background-color: rgba(0, 0, 0, 0.5);
+  pointer-events: auto;
 }
 
 .ModalContent {
