add Main Page, Update Event, Update Project, Update Direction

--- a/front/src/Pages/Profile/ui/Profile.scss
+++ b/front/src/Pages/Profile/ui/Profile.scss
@@ -41,6 +41,10 @@
                     width: 100%;
                     margin-bottom: 12px;
                 }
+
+                .SpecializationSelector {
+                    margin-bottom: 12px;
+                }
             }
         }
 
