--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -36,6 +36,8 @@
     .DropdownList {
       position: absolute;
       top: 100%;
+      max-height: 190px;
+      overflow-x: scroll;
       left: 0;
       background: white;
 
@@ -44,7 +46,11 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       width: 100%;
       z-index: 2000;
-      overflow: hidden;
+      //overflow: hidden;
+
+      .SearchField {
+        width: 100%;
+      }
   
       .DropdownItem {
         padding: 8px;
