--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -37,7 +37,6 @@
       position: absolute;
       top: 100%;
       max-height: 190px;
-      overflow-x: scroll;
       left: 0;
       background: white;
 
@@ -46,7 +45,7 @@
       box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
       width: 100%;
       z-index: 2000;
-      //overflow: hidden;
+      overflow: hidden;
 
       .SearchField {
         width: 100%;
@@ -89,6 +88,31 @@
         svg {
           cursor: pointer;
         }
+    }
+
+    &.SelectedUsers {
+      flex-direction: column;
+      padding: 0;
+      height: auto;
+      gap: 0;
+
+      .SelectedListItem {
+        background: $white;
+        width: 100%;
+        justify-content: space-between;
+
+        border-radius: 0;
+        border-bottom: 1px solid $grey;
+
+        &:first-child {
+          border-radius: $border-radius $border-radius 0 0;
+        }
+
+        &:last-child {
+          border-radius: $border-radius;
+          border: none;
+        }
+      }
     }
 }
 
