--- a/front/src/Styles/InfoPageStyle.scss
+++ b/front/src/Styles/InfoPageStyle.scss
@@ -9,11 +9,22 @@
         padding: 0px;
         display: flex;
         justify-content: start;
-        align-items: start;
+        align-items: center;
         gap: 12px;
 
-        h2 {
-            @include h2;
+        .InfoHeaderTitleContainer {
+            display: flex;
+            flex-direction: column;
+            justify-content: start;
+
+            h2 {
+                @include h2;
+            }
+
+            a {
+                text-decoration: none;
+                color: $grey;
+            }
         }
     }
 
