--- a/front/src/Pages/CreateSpecialization/CreateSpecializationForm.scss
+++ b/front/src/Pages/CreateSpecialization/CreateSpecializationForm.scss
@@ -1,5 +1,52 @@
 @import 'Styles/mixins';
+@import 'Styles/variables';
 
-.CreateSpecializationForm {
-    @include backgroundWithBefore(-16px, -54px, 16px, 720px, 500px);
+.Container {
+    width: 1160px;
+    display: flex;
+    justify-content: space-between;
+    gap: 32px;
+
+    .FormContainer {
+
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+
+        .Form {
+            .ModalFormHeader {
+                justify-content: start;
+            }
+        }
+    }
+
+    .ListResults {
+        box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+        flex: 1;
+        padding: 32px;
+        border-radius: $border-radius;
+
+        h3 {
+            margin-bottom: 24px;
+        }
+
+        ul {
+            list-style: none;
+
+            li {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 16px;
+
+                .DeleteButton {
+                    background-color: $white;
+                    border: none;
+
+                    cursor: pointer;
+
+                    &:hover {
+                        opacity: 0.7;
+                    }
+                }
+            }
+        }
+    }
 }
