--- a/front/src/Widgets/Header/ui/Header.scss
+++ b/front/src/Widgets/Header/ui/Header.scss
@@ -33,6 +33,8 @@
       position: absolute;
       left: 50%;
       transform: translateX(-50%);
+
+      cursor: pointer;
     }
   
     .HeaderLeft {
