add access by roles

--- a/front/src/Pages/Profile/ui/Profile.scss
+++ b/front/src/Pages/Profile/ui/Profile.scss
@@ -12,6 +12,11 @@
 
     .ProfileFullName {
         margin-bottom: 24px;
+
+        .ProfileRole {
+            @include text2;
+            color: $grey;
+        }
     }
     
     .ProfileForm {
