Task add and list in front

--- a/front/src/Pages/Tasks/Tasks.scss
+++ b/front/src/Pages/Tasks/Tasks.scss
@@ -34,8 +34,8 @@
       width: 34%;
     }
     &-Buttons {
-      width: 21.6%;
-    }
+      width: 21.6%
+    };
   }
   .ant-table-wrapper {
     background: $grey3;
