--- a/front/src/Styles/components/Sections/ListTableStyles.scss
+++ b/front/src/Styles/components/Sections/ListTableStyles.scss
@@ -7,150 +7,142 @@
     width: 1160px;
 }
 
-.UniversalListTable {
+.UniversalListTable, .ant-table-wrapper {
     @include text1;
     width: 100%;
-    padding: 0px 8px;
 
-    border-radius: $border-radius;
-    background-color: $grey3;
-    border-collapse: separate;
-    border-spacing: 0 8px;
+    table {
+        // Стили для всей таблицы
+        @include text1;
+        padding: 0px 8px;
+        background-color: $grey3;
+        border-radius: $border-radius;
+        border-collapse: separate;
+        border-spacing: 0 8px;
 
-
-    thead {
-        tr {
-            th {
-                padding: 8px;
-                font-weight: normal;
-
-                &:first-child {
-                    text-align: start;
-                }
-            }
-        }
-    }
-
-    tbody {
-        tr {
-            background-color: $white;
-            position: relative;
-
-            &:not(:last-child) {
-                margin-bottom: 12px;
-            }
-
-            td {
-                padding: 12px;
-                max-width: 200px;
-                
-                * {
-                    word-wrap: break-word;
-                    overflow-wrap: break-word;
-                }
-
-                &:not(:first-child, :last-child) {
-                    text-align: center;
-                    border-top: 1px solid $yellow;
-                    border-bottom: 1px solid $yellow;
-                }
-
-                .HiglightCell {
-                    @include text2;
-                    display: inline-block;
+        .ant-table-thead {
+            // Заголовок таблицы
+            tr {
+                th {
                     padding: 8px;
-                    background-color: $blue;
-                    border-radius: $border-radius;
+                    font-weight: normal;
+                    text-align: center;
+                    background-color: $grey3;
+                    border: none;
 
-                    &.HighlightGray {
-                        background-color: $grey;
+                    &:first-child {
+                        text-align: start;
+                    }
+
+                    .HeaderCell {
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+                        gap: 8px;
                     }
                 }
-
-                &:first-child {
-                    border-radius: $border-radius 0 0 $border-radius;
-                    border: 1px solid $yellow;
-                    border-right: none;
-
-                    max-width: 300px;
-                }
-
-                &:last-child {
-                    border-radius: 0 $border-radius $border-radius 0;
-                    border: 1px solid $yellow;
-                    border-left: none;
-
-                    max-width: 40px;
-                }
-
-                .LinkCell {
-                    text-decoration: none;
-                    color: $black;
-                }
-
-                .ThreeDotsButton {
-                    cursor: pointer;
-                }
-                  
-                .ActionsMenu {
-                    @include text2;
-                    position: absolute;
-                    background-color: $white;
-                    border: 1px solid $grey2;
-                    border-radius: $border-radius;
-                    padding: 4px;
-                    top: 10px;
-                    right: 40px;
-                    z-index: 10;
-                    list-style: none;
-                  
-                    li {
-                      padding: 8px 12px;
-                      width: 100%;
-
-                      border-radius: $border-radius;
-                      cursor: pointer;
-                  
-                      &:hover {
-                        background-color: $yellow;
-                      }
-                    }
-                }
-
-                ul {
-                    list-style: none;
-
-                    li {
-
-                        &.HiglightCell {
-                            display: block;
-                            padding: 4px;
-                            margin-bottom: 2px;
-                        }
-
-                        a {
-                            @include text1;
-                            text-decoration: none;
-                            color: $black;
-                        }
-                    }
-                }
-
-                &.ButtonsColumn {
-                    max-width: 120px;
-                    .primary-btn {
-                        @include primary-btn;
-                    }
-                }  
             }
         }
+
+        .ant-table-tbody {
+            // Стиль для строк таблицы
+            tr {
+                background-color: $white;
+                position: relative;
+                &:not(:last-child) {
+                    margin-bottom: 12px;
+                }
+
+                td {
+                    padding: 12px;
+                    max-width: 200px;
+
+                    * {
+                        word-wrap: break-word;
+                        overflow-wrap: break-word;
+                    }
+
+                    &:not(:first-child, :last-child) {
+                        text-align: center;
+                        border-top: 1px solid $yellow;
+                        border-bottom: 1px solid $yellow;
+                    }
+
+                    .HiglightCell {
+                        @include text2;
+                        display: inline-block;
+                        padding: 8px;
+                        background-color: $blue;
+                        border-radius: $border-radius;
+
+                        &.HighlightGray {
+                            background-color: $grey;
+                        }
+                    }
+
+                    &:first-child {
+                        border-radius: $border-radius 0 0 $border-radius;
+                        border: 1px solid $yellow;
+                        border-right: none;
+                        max-width: 300px;
+                    }
+
+                    &:last-child {
+                        border-radius: 0 $border-radius $border-radius 0;
+                        border: 1px solid $yellow;
+                        border-left: none;
+                        max-width: 40px;
+                    }
+
+                    .LinkCell {
+                        text-decoration: none;
+                        color: $black;
+                    }
+
+                    .ThreeDotsButton {
+                        cursor: pointer;
+                    }
+
+                    ul {
+                        list-style: none;
+    
+                        li {
+    
+                            &.HiglightCell {
+                                display: block;
+                                padding: 4px;
+                                margin-bottom: 2px;
+                            }
+    
+                            a {
+                                @include text1;
+                                text-decoration: none;
+                                color: $black;
+                            }
+                        }
+                    }
+                }
+            }
+
+        }
+    }
+
+    .ant-table-thead th.sortable {
+        cursor: pointer;
+    }
+
+    .ant-table-column-sort {
+        background-color: transparent !important;
+    }
+
+
+
+    .NullMessage {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        text-align: center;
     }
 }
 
-.NullMessage {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    text-align: center;
-}
   
