--- a/front/src/Styles/FormSelectorStyle.scss
+++ b/front/src/Styles/FormSelectorStyle.scss
@@ -7,6 +7,39 @@
   gap: 16px;
 }
 
+.Selector {
+  height: 40px;
+  border-radius: $border-radius;
+  border-color: $grey;
+
+  :global {
+    .ant-select-selector {
+      @include text2;
+      height: 40px;
+      padding: 12px;
+      border-color: $grey;
+    }
+  
+    .DropdownItem {
+      &:hover {
+        background-color: transparent;
+      }
+    }
+  
+    .ant-select-dropdown {
+      border: 1px solid $grey;
+      border-radius: 4px;
+      box-shadow: none;
+    }
+  
+    .ant-select-item-option-selected {
+      color: $black !important; 
+    }
+  }
+
+  
+}
+
 .FormField {
     display: flex;
     justify-content: space-between;
